main/default/objects/Rating_Range_Value__c/Rating_Range_Value__c.object-meta.xml
<CustomObject>
    <label>Rating Range Value</label>
    <nameField>
        <displayFormat>RRV-{0000}</displayFormat>
        <label>Rating Range Value</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Range Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>