main/default/objects/Rating_Range_Value__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <description>The Id of the batch job where this data was inserted or upserted.</description>
    <label>Batch Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>