main/default/objects/Rating_Range_Value__c/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <label>Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>