main/default/objects/Rating_Range_Value__c/fields/Lower_Value__c.field-meta.xml
<CustomField>
    <fullName>Lower_Value__c</fullName>
    <label>Lower Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>