main/default/objects/Rating_Range_Value__c/fields/Rating_Range_Value__c.field-meta.xml
<CustomField>
    <fullName>Rating_Range_Value__c</fullName>
    <externalId>true</externalId>
    <label>Rating Range Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>