main/default/objects/Rating_Range_Value__c/fields/Reference_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Name Id</label>
    <referenceTo>Rating_Reference_Name__c</referenceTo>
    <relationshipLabel>Rating Range Values</relationshipLabel>
    <relationshipName>Rating_Range_Values</relationshipName>
    <type>Lookup</type>
</CustomField>