main/default/objects/Rating_Range_Value__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>SortOrder</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>