main/default/objects/Rating_Range_Value__c/fields/Upper_Value__c.field-meta.xml
<CustomField>
    <fullName>Upper_Value__c</fullName>
    <label>Upper Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>